# qwen-tuning-evals

./: .gitignore  README.md  data_preparation.py  env.example  evaluation_framework.py  launch.py  pyproject.toml  qwen_finetune_marimo.py  qwen_notebook.py
