[project]
name = "qwen-tuning-evals"
version = "0.1.0"
description = "Fine-tuning and evaluation framework for Qwen models using Marimo"
authors = [
    {name = "Jacques Camier", email = "jacques@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "marimo>=0.8.0",
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "datasets>=2.14.0",
    "peft>=0.8.0",
    "accelerate>=0.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.0",
    "nltk>=3.8.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
cuda = [
    "bitsandbytes>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
